--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "15.3.1",
     "react-native": "^0.32.0",
+    "react-native-uuid": "^1.4.8",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-actions": "^0.12.0"
