--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux-form": "^0.14.5",
     "redux": "^3.5.2",
     "redux-actions": "^0.12.0",
+    "redux-persist": "^3.5.0",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
