--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "dependencies": {
     "react": "15.3.1",
     "react-native": "^0.32.0",
+    "react-native-drawer": "^2.3.0",
     "react-native-uuid": "^1.4.8",
     "react-redux": "^4.4.5",
     "react-redux-form": "^0.14.5",
     "redux": "^3.5.2",
     "redux-actions": "^0.12.0",
     "redux-persist": "^3.5.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "tween-functions": "^1.2.0"
   },
   "devDependencies": {
     "remote-redux-devtools": "^0.4.7"
