--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "native-base": "^0.5.9",
     "react": "15.3.1",
     "react-native": "^0.32.0",
     "react-native-drawer": "^2.3.0",
