--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react-native-drawer": "^2.3.0",
     "react-native-uuid": "^1.4.8",
     "react-redux": "^4.4.5",
-    "react-redux-form": "^1.0.10",
     "redux": "^3.5.2",
     "redux-actions": "^0.12.0",
+    "redux-form": "^6.1.1",
     "redux-persist": "^3.5.0",
     "redux-thunk": "^2.1.0",
     "tween-functions": "^1.2.0"
