--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "native-base": "^0.5.9",
-    "react": "15.3.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-native": "^0.36.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-i18n": "^0.1.1",
     "react-native-uuid": "^1.4.8",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
