--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "lodash": "^4.16.6",
+    "moment-timezone": "^0.5.9",
     "native-base": "^0.5.9",
     "pouch-redux-middleware": "^0.5.0",
     "pouchdb-react-native": "^6.1.20",
