--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment-timezone": "0.5.9",
     "native-base": "0.5.13",
     "pouch-redux-middleware": "0.5.0",
+    "pouchdb-authentication": "0.5.5",
     "pouchdb-react-native": "6.1.20",
     "react": "15.3.2",
     "react-dom": "15.3.2",
