--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "redux": "3.5.2",
     "redux-actions": "0.13.0",
     "redux-form": "6.1.1",
-    "redux-persist": "4.0.0-alpha7",
+    "redux-persist": "^4.0.0-beta1",
     "redux-thunk": "2.1.0",
     "tween-functions": "1.2.0"
   },
